welcome.lessons.welcome.loopdowhile.Poucet1.scala.error
Poucet:17: error: illegal start of simple expression
}
^Poucet:29: error: 'while' expected but '}' found.
	}
        ^